kube-manifests/namespace-network-test copy.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: kangaroo
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kangaroo-deployment
  namespace: kangaroo
  labels:
    app: kangaroo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kangaroo
      tier: frontend
  template:
    metadata:
      labels:
        name: kangaroo-app
        app: kangaroo
        tier: frontend
    spec:
        containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
        - name: netshoot
          image: nicolaka/netshoot
          command: ["/bin/bash"]
          args: ["-c", "while true; do ping localhost; sleep 60;done"]
---
apiVersion: v1
kind: Service
metadata:
  name: kangaroo-web-service
  labels:
    app: kangaroo
    tier: frontend
  namespace: kangaroo
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  type: ClusterIP 
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  #type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: kangaroo
    tier: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: tiger
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiger-deployment
  namespace: tiger
  labels:
    app: tiger
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tiger
      tier: frontend
  template:
    metadata:
      labels:
        name: tiger-app
        app: tiger
        tier: frontend
      annotations:
        comment: updated-network-policy
    spec:
        containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
        - name: netshoot
          image: nicolaka/netshoot
          command: ["/bin/bash"]
          args: ["-c", "while true; do ping localhost; sleep 60;done"]
---
apiVersion: v1
kind: Service
metadata:
  name: tiger-web-service
  labels:
    app: tiger
    tier: frontend
  namespace: tiger
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  type: ClusterIP 
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  #type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: tiger
    tier: frontend
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: tiger
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: kangaroo
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
